tests/baselines/reference/asyncGenerators.functionDeclaration.6.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.6.es6.ts(1,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.6.es6.ts (1 errors) ====
    async function * f(a = await 1) {}
                           ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.